--- a/About Models.Rmd
+++ b/About Models.Rmd
@@ -19,8 +19,7 @@ Only applies to OHIE dataset
 load("nn2.Rdata")
 load("nn4.Rdata")
 ```
-## Slide with Bullets
-
+## Content Library
 - Insurance.csv
   - Multiple Linear Regression
 - OHIE
@@ -47,16 +46,17 @@ Mutliple Linear Regression
 ```
 
 ## Simple Tree Regression
-```{}
+```{r }
+
+```
 ## Random Forest Regression
 
 ## Gradient boosting Regression
 
 ## Artificial Neural Network Regression
-Tried out many different parameters with different levels of complexity.
 A Neural Network with 1 Hidden Layer and 1 Neuron, using a softplus activation function.
 ```{r nn1 Neural Networks presentation}
-
 plot(nn2, rep = "best")
-plot(nn4, rep = "best")
 ```
+
+## Artificial Neural Network Regression
