--- a/About Models.Rmd
+++ b/About Models.Rmd
@@ -121,7 +121,9 @@ Subsequent of the tweaking of factors such as the number of iterations and the t
 ```{r}
 ggplot(depthList_evaluation, aes(x=treeDepth, y=rmse.test)) +
   geom_col() +
-  labs(title = "Smallest out of sample error per tree depth")
+  labs(title = "Smallest out of sample error per tree depth") +
+  scale_x_continuous("Tree Depth", breaks = c(1:9), labels = as.character(c(1:9))) +
+  coord_cartesian(ylim = c(1.5*10^4, 1.8*10^4))
 ```
 
 
